css/responsive.css
/* ... */
    /*=====================================================
        Small tablet devices
    =====================================================*/
    @media only screen and (max-width: 1023px) {
        /*=====================================================
        HBR Leadspace
        =====================================================*/

        .hbr-leadspace {
            padding-bottom: 121px;

        }
        .hbr-leadspace--eyebrow {
            font-size: 14px;
            margin-bottom: 8px;
            line-height: 1.428;
        }

        .hbr-leadspace--title h1 {
            -webkit-box-flex: 1;
                -ms-flex: 1 0 auto;
                    flex: 1 0 auto;
            font-size: 68px;
            width: 100%;
        }

        .hbr-leadspace--title a {
            margin-left: 0;
            width: 80px;
            height: 80px;
        }

        .hbr-leadspace--title a svg {
            width: 24px;
        }

        .hbr-leadspace--title span {
            font-size: 10px;
        }

        .hbr-leadspace--description-wrap {
            width: 100%;
        }

        .hbr-path-animation {
            bottom: 27%;
        }

        /*=====================================================
        HBR FULL BACKGROUND BANNER
        =====================================================*/

        .full-bg-banner-title {
            width: 75%;
            padding-right: 0;
        }

        .full-bg-banner.with-bg-inside .full-bg-banner-title {
            margin-bottom: 16px;
        }

        .full-bg-banner-cta {
            width: auto;
        }

        .full-bg-banner.with-bg-inside .full-bg-banner-wrapper {
            padding: 21px 32px;
        }

        .full-bg-banner-title {
            margin-bottom: 29px;
        }

        .full-bg-banner {
            padding-top: 42px;
            padding-bottom: 54px;
        }

        .full-bg-banner.with-bg-inside {
            margin-top: 15px;
            margin-bottom: 80px;
        }

        .full-bg-banner.with-bg-inside .full-bg-banner-title {
            width: 100%;
        }

        .card-featured-post__content h3 {
            font-size: 16px;
            line-height: 22px;
        }

        .hbr-text-module-sponsored__inner {
            gap: 20px;
        }

        .hbr .column-left-one {
            width: calc(50% - 10px);
        }

        .hbr .two-col .column-middle-two {
            width: calc(50% - 10px);
        }

        .two-col .column-middle-two .card-featured-post__content {
            width: 100%;
        }

        .hbr .two-col .card-featured-post.have-icon > a {
            aspect-ratio: 698/520;
        }
        .full-bg-banner-img {
            right: 0;
        }

        .card-featured-post__content {
            padding: 10px;
        }

        .three-col .card-featured-post__content h3 {
            font-size: 14px;
        }

        .hbr .three-col .column-left-one {
            width: calc(39.2% - 10px);
        }

        section.ads {
            padding-top: 80px;
            padding-bottom: 80px;
        }
    }
/* ... */

